# fast_search_job

./: README.md  pyproject.toml
src/: get_vacancies_hh.py  main.py  new_vacancy.py  parent_save_file.py  parser.py  save_vacancies.py  user_func.py  vacancies.py
tests/: conftest.py  test_get_vacancies_hh.py  test_new_vacancy.py  test_save_vacancies.py  test_user_func.py  test_vacancies.py
